# ancdb

./:  .gitignore  ANC-DB-EVALUATION-REPORT.en.md  ANC-DB-EVALUATION-REPORT.md  ANC-DB-IMPLEMENTATION-PLAYBOOK.en.md  ANC-DB-IMPLEMENTATION-PLAYBOOK.md  ANC-DB-SPEC-STRICT-v1.2.en.md  ANC-DB-SPEC-v1.1.en.md  ANC-DB-TASKLIST.en.md  ANC-DB-TASKLIST.md  Cargo.toml  README.md
crates/ancdb-cli/: Cargo.toml
crates/ancdb-cli/src/: main.rs
crates/ancdb-core/: Cargo.toml  build.rs
crates/ancdb-core/src/: lib.rs
crates/ancdb-protocol/: Cargo.toml
crates/ancdb-protocol/src/: lib.rs
docs/: ANC-DB-MANUAL.en.md  ANC-DB-MANUAL.md
tests/integration/: smoke.rs  stdio_roundtrip.rs
